--- a/src/componentes/Campo/Campo.css
+++ b/src/componentes/Campo/Campo.css
@@ -20,6 +20,7 @@
     outline-color: #6278F7;
     font-size: 16px;
     box-sizing: border-box;
+    border-radius: 1rem;
 }
 
 .campo-color input{
@@ -27,17 +28,20 @@
     padding: 5px 20px;
 }
 
-@media only screen and (max-width: 368px) {
+@media only screen and (max-width: 390px) {
     .campo {
         width: 95%;
+        padding:auto;
+        margin:auto;
+
     }
     .campo label{
         font-size: 0.8rem;
-        margin-left: 1rem;
+        
     }
     .campo input{
         font-size: 0.8rem;
-        padding: 1rem 1.5rem;
+        padding: 0.8rem 
     }
     .campo-color input{
         height: 40px;
