--- a/src/componentes/Footer/Footer.css
+++ b/src/componentes/Footer/Footer.css
@@ -13,20 +13,20 @@
 }
 
 .redes img{
-    padding: 0px 15px;
-    max-width: 6rem;
-    max-height: 2rem;
+    padding: 0px 1rem;
+    height: 2rem;
+    width: 2rem;
 }
 
 
 
-@media only screen and (max-width: 368px) {
+@media only screen and (max-width: 390px) {
     .footer{
         padding: 3%;
         background-size: auto;
         background-position: bottom;
         font-family: 'Montserrat', sans-serif;
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
     
     .footer img{
@@ -37,12 +37,12 @@
     } 
     .redes img{
         padding: 0.3px 0.3rem;
-        height: 0.8rem;
-        width: 0.8rem;
+        height: 1.2rem;
+        width: 1.2rem;
         }
     .footer strong{
         margin-left: 1rem;
-        font-size: 0.6rem;
+        font-size: 0.7rem;
     }
 }
 
